--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ h3{
   display: none;
   cursor: pointer;
   transition: transform 0.2s ease;
+  z-index: 1;
 }
 
 #scrollTopBtn:hover {
@@ -126,6 +127,7 @@ h3{
   height: 45px;
   font-size: 1.2em;
   cursor: pointer;
+  z-index: 1;
 }
 
 
